components/automate-dex/web/theme/styles.css
@font-face {
  font-family: 'Muli';
  src: url('../static/fonts/Muli-Regular.ttf');
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: 'Muli';
  src: url('../static/fonts/Muli-Bold.ttf');
  font-weight: 700;
  font-style: normal;
}

html, body {
  height: 100%;
  font-family: 'Muli';
  color: #222435;
  font-size: 14px;
  font-weight: 400;
}

button {
  display: block;
  background-color: #3864f2;
  color: #fff;
  width: 279px;
  height: 53px;
  margin: 0 auto;
  border-radius: 4px;
  border: 0;
  line-height: 33px;
}

div.logo {
  margin-bottom: 30px;
}

a.back {
  text-decoration: none;
  display: inline-block;
  margin: 15px 30px;
  color: #222435;
}

a.back:hover {
  text-decoration: underline;
}

h1 {
  font-size: 18px;
  font-weight: 400;
  margin: 0 auto 20px;
}

main.password {
  height: 100%;
}

.dex-error-box {
  background-color: #dc267f;
  width: 250px;
  border-radius: 3px;
  margin: 12px auto;
}

.dex-error-text {
  font-size: 12px;
  top: -1px;
  position: relative;
}

.dex-btn-text {
  font-family: 'Muli';
  font-size: 14px;
  font-weight: 400;
  padding: 0px 6px;
  text-align: left;
}

.dex-btn-icon--local,
.dex-btn-icon--saml,
.dex-btn-icon--ldap {
  background-color: #3864f2;
}

.dex-btn-icon--local {
  background-image: url(../static/img/email-icon.png)
}

.dex-btn-icon--msad {
  background-image: url(../static/img/microsoft-icon.png)
}

.theme-btn--primary {
  width: 150px;
  font-weight: 400;
  font-size: 14px;
  margin-top: 10px;
}

.theme-panel {
  text-align: center;
  position: relative;
  top: 40%;
  transform: translateY(-50%);
}

.theme-body {
  font-family: 'Source Sans Pro', Helvetica, sans-serif;
}

.theme-navbar {
  background-color: #fff;
  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
  color: #333;
  font-size: 13px;
  font-weight: 100;
  height: 46px;
  overflow: hidden;
  padding: 0 10px;
}

.theme-navbar__logo-wrap {
  display: inline-block;
  height: 100%;
  overflow: hidden;
  padding: 10px 15px;
  width: 300px;
}

.theme-navbar__logo {
  height: 60px;
}

.theme-heading {
  font-size: 12px;
  font-weight: 500;
  margin-bottom: 10px;
  margin-top: 5px;
}

.theme-form-row {
  display: block;
  margin: 10px auto;
}

.theme-form-input {
  border-radius: 4px;
  border: 1px solid #CCC;
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  color: #666;
  display: block;
  font-size: 14px;
  height: 36px;
  line-height: 1.42857143;
  margin: auto;
  padding: 6px 12px;
  width: 250px;
}

.theme-form-input:focus,
.theme-form-input:active {
  border-color: #66AFE9;
  outline: none;
}

.theme-form-label {
  display: block;
  font-size: 13px;
  font-weight: 600;
  margin: 4px auto;
  position: relative;
  text-align: left;
  width: 250px;
}

